fix form-stepper-container to bottom of the screen on mobile

--- a/src/styles/FormStyles/Form.sass
+++ b/src/styles/FormStyles/Form.sass
@@ -106,7 +106,7 @@
     #form-stepper-container
         box-sizing: border-box
         background-color: index.$light-background-color
-        position: absolute
+        position: fixed
         align-items: center
         padding: 0px 7%
         bottom: 0px
